// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/select/demo/automatic-tokenization.md correctly 1`] = `
<div class="ant-select ant-select-enabled" style="width: 100%;">
  <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-expanded="false" class="ant-select-selection ant-select-selection--multiple">
    <div class="ant-select-selection__rendered">
      <div>
        <li class="ant-select-search ant-select-search--inline">
          <div class="ant-select-search__field__wrap">
            <input autocomplete="off" value="" class="ant-select-search__field"><span class="ant-select-search__field__mirror">&nbsp;</span></div>
        </li>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/basic.md correctly 1`] = `
<div>
  <div class="ant-select ant-select-enabled" style="width: 120px;">
    <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-expanded="false" tabindex="0" class="ant-select-selection ant-select-selection--single">
      <div class="ant-select-selection__rendered">
        <div title="Lucy" class="ant-select-selection-selected-value" style="display: block; opacity: 1;">Lucy</div>
      </div><span unselectable="unselectable" class="ant-select-arrow"><b></b></span></div>
  </div>
  <div class="ant-select ant-select-disabled ant-select-allow-clear" style="width: 120px;">
    <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-expanded="false" tabindex="-1" class="ant-select-selection ant-select-selection--single">
      <div class="ant-select-selection__rendered">
        <div title="Lucy" class="ant-select-selection-selected-value" style="display: block; opacity: 1;">Lucy</div>
      </div><span unselectable="unselectable" class="ant-select-selection__clear"></span><span unselectable="unselectable" class="ant-select-arrow"><b></b></span></div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/combobox.md correctly 1`] = `
<div class="ant-select ant-select-combobox ant-select-enabled" style="width: 200px;">
  <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-expanded="false" class="ant-select-selection ant-select-selection--single">
    <div class="ant-select-selection__rendered">
      <div unselectable="unselectable" class="ant-select-selection__placeholder" style="display: block;">Enter the account name</div>
      <ul>
        <li class="ant-select-search ant-select-search--inline">
          <div class="ant-select-search__field__wrap">
            <input autocomplete="off" value="" class="ant-select-search__field"><span class="ant-select-search__field__mirror">&nbsp;</span></div>
        </li>
      </ul>
    </div><span unselectable="unselectable" class="ant-select-arrow"><b></b></span></div>
</div>
`;

exports[`renders ./components/select/demo/coordinate.md correctly 1`] = `
<div>
  <div class="ant-select ant-select-enabled" style="width: 120px;">
    <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-expanded="false" tabindex="0" class="ant-select-selection ant-select-selection--single">
      <div class="ant-select-selection__rendered">
        <div title="Zhejiang" class="ant-select-selection-selected-value" style="display: block; opacity: 1;">Zhejiang</div>
      </div><span unselectable="unselectable" class="ant-select-arrow"><b></b></span></div>
  </div>
  <div class="ant-select ant-select-enabled" style="width: 120px;">
    <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-expanded="false" tabindex="0" class="ant-select-selection ant-select-selection--single">
      <div class="ant-select-selection__rendered">
        <div title="Hangzhou" class="ant-select-selection-selected-value" style="display: block; opacity: 1;">Hangzhou</div>
      </div><span unselectable="unselectable" class="ant-select-arrow"><b></b></span></div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/label-in-value.md correctly 1`] = `
<div class="ant-select ant-select-enabled" style="width: 120px;">
  <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-expanded="false" tabindex="0" class="ant-select-selection ant-select-selection--single">
    <div class="ant-select-selection__rendered">
      <div title="Lucy (101)" class="ant-select-selection-selected-value" style="display: block; opacity: 1;">Lucy (101)</div>
    </div><span unselectable="unselectable" class="ant-select-arrow"><b></b></span></div>
</div>
`;

exports[`renders ./components/select/demo/multiple.md correctly 1`] = `
<div class="ant-select ant-select-enabled" style="width: 100%;">
  <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-expanded="false" class="ant-select-selection ant-select-selection--multiple">
    <div class="ant-select-selection__rendered">
      <div unselectable="unselectable" class="ant-select-selection__placeholder" style="display: none;">Please select</div>
      <div>
        <li unselectable="unselectable" title="a1" class="ant-select-selection__choice">
          <div class="ant-select-selection__choice__content">a1</div><span class="ant-select-selection__choice__remove"></span></li>
        <li unselectable="unselectable" title="b2" class="ant-select-selection__choice">
          <div class="ant-select-selection__choice__content">b2</div><span class="ant-select-selection__choice__remove"></span></li>
        <li class="ant-select-search ant-select-search--inline">
          <div class="ant-select-search__field__wrap">
            <input autocomplete="off" value="" class="ant-select-search__field"><span class="ant-select-search__field__mirror">&nbsp;</span></div>
        </li>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/optgroup.md correctly 1`] = `
<div class="ant-select ant-select-enabled" style="width: 200px;">
  <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-expanded="false" tabindex="0" class="ant-select-selection ant-select-selection--single">
    <div class="ant-select-selection__rendered">
      <div title="Lucy" class="ant-select-selection-selected-value" style="display: block; opacity: 1;">Lucy</div>
    </div><span unselectable="unselectable" class="ant-select-arrow"><b></b></span></div>
</div>
`;

exports[`renders ./components/select/demo/options.md correctly 1`] = `
<div class="ant-select ant-select-enabled" style="width: 120px;">
  <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-expanded="false" tabindex="0" class="ant-select-selection ant-select-selection--single">
    <div class="ant-select-selection__rendered">
      <div title="北京 010" class="ant-select-selection-selected-value" style="display: block; opacity: 1;">北京</div>
    </div><span unselectable="unselectable" class="ant-select-arrow"><b></b></span></div>
</div>
`;

exports[`renders ./components/select/demo/search.md correctly 1`] = `
<div class="ant-select ant-select-enabled" style="width: 200px;">
  <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-expanded="false" tabindex="0" class="ant-select-selection ant-select-selection--single">
    <div class="ant-select-selection__rendered">
      <div unselectable="unselectable" class="ant-select-selection__placeholder" style="display: block;">Select a person</div>
      <div class="ant-select-search ant-select-search--inline" style="display: none;">
        <div class="ant-select-search__field__wrap">
          <input autocomplete="off" value="" class="ant-select-search__field"><span class="ant-select-search__field__mirror">&nbsp;</span></div>
      </div>
    </div><span unselectable="unselectable" class="ant-select-arrow"><b></b></span></div>
</div>
`;

exports[`renders ./components/select/demo/search-box.md correctly 1`] = `
<div class="ant-select ant-select-combobox ant-select-enabled" style="width: 200px;">
  <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-expanded="false" class="ant-select-selection ant-select-selection--single">
    <div class="ant-select-selection__rendered">
      <div unselectable="unselectable" class="ant-select-selection__placeholder" style="display: block;">input search text</div>
      <ul>
        <li class="ant-select-search ant-select-search--inline">
          <div class="ant-select-search__field__wrap">
            <input autocomplete="off" value="" class="ant-select-search__field"><span class="ant-select-search__field__mirror">&nbsp;</span></div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/select-users.md correctly 1`] = `
<div class="ant-select ant-select-enabled" style="width: 100%;">
  <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-expanded="false" class="ant-select-selection ant-select-selection--multiple">
    <div class="ant-select-selection__rendered">
      <div unselectable="unselectable" class="ant-select-selection__placeholder" style="display: block;">Select users</div>
      <div>
        <li class="ant-select-search ant-select-search--inline">
          <div class="ant-select-search__field__wrap">
            <input autocomplete="off" value="" class="ant-select-search__field"><span class="ant-select-search__field__mirror">&nbsp;</span></div>
        </li>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/size.md correctly 1`] = `
<div>
  <div class="ant-radio-group ant-radio-group-default">
    <label class="ant-radio-button-wrapper"><span class="ant-radio-button"><input type="radio" class="ant-radio-button-input"><span class="ant-radio-button-inner"></span></span><span>Large</span></label>
    <label class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"><span class="ant-radio-button ant-radio-button-checked"><input type="radio" class="ant-radio-button-input"><span class="ant-radio-button-inner"></span></span><span>Default</span></label>
    <label class="ant-radio-button-wrapper"><span class="ant-radio-button"><input type="radio" class="ant-radio-button-input"><span class="ant-radio-button-inner"></span></span><span>Small</span></label>
  </div>
  <br>
  <br>
  <div class="ant-select ant-select-enabled" style="width: 200px;">
    <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-expanded="false" tabindex="0" class="ant-select-selection ant-select-selection--single">
      <div class="ant-select-selection__rendered">
        <div title="
      a1
    " class="ant-select-selection-selected-value" style="display: block; opacity: 1;">
          a1
        </div>
      </div><span unselectable="unselectable" class="ant-select-arrow"><b></b></span></div>
  </div>
  <br>
  <div class="ant-select ant-select-combobox ant-select-enabled" style="width: 200px;">
    <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-expanded="false" class="ant-select-selection ant-select-selection--single">
      <div class="ant-select-selection__rendered">
        <ul>
          <li class="ant-select-search ant-select-search--inline">
            <div class="ant-select-search__field__wrap">
              <input autocomplete="off" value="a1" class="ant-select-search__field"><span class="ant-select-search__field__mirror">a1&nbsp;</span></div>
          </li>
        </ul>
      </div><span unselectable="unselectable" class="ant-select-arrow"><b></b></span></div>
  </div>
  <br>
  <div class="ant-select ant-select-enabled" style="width: 200px;">
    <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-expanded="false" class="ant-select-selection ant-select-selection--multiple">
      <div class="ant-select-selection__rendered">
        <div unselectable="unselectable" class="ant-select-selection__placeholder" style="display: none;">Please select</div>
        <div>
          <li unselectable="unselectable" title="
      a1
    " class="ant-select-selection__choice">
            <div class="ant-select-selection__choice__content">
              a1
            </div><span class="ant-select-selection__choice__remove"></span></li>
          <li unselectable="unselectable" title="
      b2
    " class="ant-select-selection__choice">
            <div class="ant-select-selection__choice__content">
              b2
            </div><span class="ant-select-selection__choice__remove"></span></li>
          <li class="ant-select-search ant-select-search--inline">
            <div class="ant-select-search__field__wrap">
              <input autocomplete="off" value="" class="ant-select-search__field"><span class="ant-select-search__field__mirror">&nbsp;</span></div>
          </li>
        </div>
      </div>
    </div>
  </div>
  <br>
  <div class="ant-select ant-select-enabled" style="width: 200px;">
    <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-expanded="false" class="ant-select-selection ant-select-selection--multiple">
      <div class="ant-select-selection__rendered">
        <div unselectable="unselectable" class="ant-select-selection__placeholder" style="display: none;">Please select</div>
        <div>
          <li unselectable="unselectable" title="
      a1
    " class="ant-select-selection__choice">
            <div class="ant-select-selection__choice__content">
              a1
            </div><span class="ant-select-selection__choice__remove"></span></li>
          <li unselectable="unselectable" title="
      b2
    " class="ant-select-selection__choice">
            <div class="ant-select-selection__choice__content">
              b2
            </div><span class="ant-select-selection__choice__remove"></span></li>
          <li class="ant-select-search ant-select-search--inline">
            <div class="ant-select-search__field__wrap">
              <input autocomplete="off" value="" class="ant-select-search__field"><span class="ant-select-search__field__mirror">&nbsp;</span></div>
          </li>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/tags.md correctly 1`] = `
<div class="ant-select ant-select-enabled" style="width: 100%;">
  <div role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-expanded="false" class="ant-select-selection ant-select-selection--multiple">
    <div class="ant-select-selection__rendered">
      <div unselectable="unselectable" class="ant-select-selection__placeholder" style="display: block;">Tags Mode</div>
      <div>
        <li class="ant-select-search ant-select-search--inline">
          <div class="ant-select-search__field__wrap">
            <input autocomplete="off" value="" class="ant-select-search__field"><span class="ant-select-search__field__mirror">&nbsp;</span></div>
        </li>
      </div>
    </div>
  </div>
</div>
`;
